--- a/index.html
+++ b/index.html
@@ -13,15 +13,22 @@
     <script src="js/script.js" type="text/javascript"></script>
   </head>
 
-  <body background="./images/Owls_Birds_Snowy_owl_Flight_Front_543052_2560x1440.jpg">
+  <body
+    background="./images/Owls_Birds_Snowy_owl_Flight_Front_543052_2560x1440.jpg"
+  >
     <header id="page-header">
       <nav class="main-nav">
         <ul>
-          <li><a href="#breaking-news">Breaking News</a></li>
-          <li><a href="#quiditch-news">Quiditch</a></li>
-          <li><a href="#whitches-helper">Witches Little Helper</a></li>
-          <li><a href="#www"></a>Weasleys' Wizard Wheezes</li>
-          <li><a href="#hogwarts">Hogwarts</a></li>
+          <li><a href="./index.html">Daily Owl</a></li>
+          <li><a href="./pages/breaking-news.html">Breaking News</a></li>
+          <li><a href="./pages/quidditch.html">Quidditch</a></li>
+          <li>
+            <a href="./pages/witches-little-helper.html"
+              >Witches Little Helper</a
+            >
+          </li>
+          <li><a href="./pages/www.html"></a>Weasleys' Wizard Wheezes</li>
+          <li><a href="./pages/hogwarts.html">Hogwarts</a></li>
         </ul>
       </nav>
     </header>
