--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="../css/hogwarts.css" type="text/css" />
   </head>
 
-  <body background="./images/Owls_Birds_Snowy_owl_Flight_Front_543052_2560x1440.jpg">
+  <body background="../images/afaur5o8aqeFKbXOINshba0y.avif">
     <header id="page-header">
       <nav class="main-nav">
         <ul>
+          <li><a href="../index.html">Daily Owl</a></li>
           <li><a href="../pages/breaking-news.html">Breaking News</a></li>
-          <li><a href="../pages/quiditch.html">Quiditch</a></li>
+          <li><a href="../pages/quidditch.html">Quidditch</a></li>
           <li><a href="../pages/witches-little-helper.html">Witches Little Helper</a></li>
           <li><a href="../pages/www.html"></a>Weasleys' Wizard Wheezes</li>
           <li><a href="../pages/hogwarts.html">Hogwarts</a></li>
