--- a/pages/witches-little-helper.html
+++ b/pages/witches-little-helper.html
@@ -16,8 +16,9 @@
     <header id="page-header">
       <nav class="main-nav">
         <ul>
+          <li><a href="../index.html">Daily Owl</a></li>
           <li><a href="../pages/breaking-news.html">Breaking News</a></li>
-          <li><a href="../pages/quiditch.html">Quiditch</a></li>
+          <li><a href="../pages/quidditch.html">Quidditch</a></li>
           <li><a href="../pages/witches-little-helper.html">Witches Little Helper</a></li>
           <li><a href="../pages/www.html"></a>Weasleys' Wizard Wheezes</li>
           <li><a href="../pages/hogwarts.html">Hogwarts</a></li>
