--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Annie Uchiha" />
@@ -11,26 +12,23 @@
     <link rel="stylesheet" href="./css/style.css" type="text/css" />
     <link rel="stylesheet" href="./css/normalize.css" type="text/css" />
     <script src="js/script.js" type="text/javascript"></script>
-  </head>
+</head>
 
-  <body
-    background="./images/Owls_Birds_Snowy_owl_Flight_Front_543052_2560x1440.jpg"
-  >
+<body background="./images/Owls_Birds_Snowy_owl_Flight_Front_543052_2560x1440.jpg">
     <header id="page-header">
-      <nav class="main-nav">
-        <ul>
-          <li><a href="./index.html">Daily Owl</a></li>
-          <li><a href="./pages/breaking-news.html">Breaking News</a></li>
-          <li><a href="./pages/quidditch.html">Quidditch</a></li>
-          <li>
-            <a href="./pages/witches-little-helper.html"
-              >Witches Little Helper</a
-            >
-          </li>
-          <li><a href="./pages/www.html"></a>Weasleys' Wizard Wheezes</li>
-          <li><a href="./pages/hogwarts.html">Hogwarts</a></li>
-        </ul>
-      </nav>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="./index.html">Daily Owl</a></li>
+                <li><a href="./pages/breaking-news.html">Breaking News</a></li>
+                <li><a href="./pages/quidditch.html">Quidditch</a></li>
+                <li>
+                    <a href="./pages/witches-little-helper.html">Witches Little Helper</a>
+                </li>
+                <li><a href="./pages/www.html"></a>Weasleys' Wizard Wheezes</li>
+                <li><a href="./pages/hogwarts.html">Hogwarts</a></li>
+            </ul>
+        </nav>
     </header>
-  </body>
+</body>
+
 </html>
