starting work on first page

--- a/pages/breaking-news.html
+++ b/pages/breaking-news.html
@@ -26,6 +26,23 @@
             </ul>
         </nav>
     </header>
+
+    <main id="page-content">
+
+        <section class="breaking-news">
+            <h2>Breaking News</h2>
+        </section>
+
+        <section class="new-beasts">
+            <h3>New Magical Beast Discovered in New York City</h3>
+            <img src="../images/Demiguise.JPG" alt="Demiguise image" />
+            <p>
+                <b>The Demiguise</b> is a peaceful, herbivorous magical beast that could make
+                itself invisible and tell the future, both abilities which made it
+                very sought-after. However, it was very hard to catch until... <i> read more...</i>
+            </p>
+        </section>
+    </main>
 </body>
 
 </html>
