breaking-news-page

--- a/pages/breaking-news.html
+++ b/pages/breaking-news.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/breaking-news.css" type="text/css" />
 </head>
 
-<body background="../images/Owls_Birds_Snowy_owl_Flight_Front_543052_2560x1440.jpg">
+<body>
     <header id="page-header">
         <nav class="main-nav">
             <ul>
@@ -27,22 +27,55 @@
         </nav>
     </header>
 
-    <main id="page-content">
-
-        <section class="breaking-news">
+    <div id="breaking-news-article-3">
+        <div class="breaking-news-1">
             <h2>Breaking News</h2>
-        </section>
+            <section class="new-beasts">
+                <h3>New Magical Beast Discovered in New York City</h3>
+                <img src="../images/Demiguise.JPG" alt="Demiguise image" />
+                <p>
+                    <b>The Demiguise</b> is a peaceful, herbivorous magical beast that could make
+                    itself invisible and tell the future, both abilities which made it
+                    very sought-after. However, it was very hard to catch until... <i> read full article...</i>
+                </p>
+            </section>
+        </div>
 
-        <section class="new-beasts">
-            <h3>New Magical Beast Discovered in New York City</h3>
-            <img src="../images/Demiguise.JPG" alt="Demiguise image" />
-            <p>
-                <b>The Demiguise</b> is a peaceful, herbivorous magical beast that could make
-                itself invisible and tell the future, both abilities which made it
-                very sought-after. However, it was very hard to catch until... <i> read more...</i>
-            </p>
-        </section>
-    </main>
+        <div class="breaking-news-1">
+            <h2>Dragons Broke Loose</h2>
+            <section class="loose-dragons">
+                <h3>Dragons broke loose</h3>
+                <img src="../images/ridgeback.png" alt="Dragons" />
+                <p>
+                    Four Norwegian Ridgeback dragons broke loose from
+                    the Romanian reserve. The dragons have been spotted
+                    by five muggles which have been Obliviated at once...
+                    <i> read full article...</i>
+                </p>
+            </section>
+        </div>
+
+        <div class="breaking-news-1">
+            <h2>Breaking News</h2>
+            <section class="gringotts-bank-break-in">
+                <h3>Gringotts Break-In Latest</h3>
+                <img src="../images/Gringotts.png" alt="gringotts-image" />
+                <p>
+                    There have not been many break-ins in the history
+                    of Gringotts Wizarding Bank. Last night, however,
+                    there was another attempt. The culprit has not been
+                    caught yet and the Goblins do not have any leads...
+                    <i>read full article...</i>
+                </p>
+            </section>
+        </div>
+
+    </div>
+
+    
+
+
+
 </body>
 
 </html>
