--- a/pages/breaking-news.html
+++ b/pages/breaking-news.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Annie Uchiha" />
@@ -11,71 +10,69 @@
 
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
     <link rel="stylesheet" href="../css/breaking-news.css" type="text/css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header id="page-header">
-        <nav class="main-nav">
-            <ul>
-                <li><a href="../index.html">Daily Owl</a></li>
-                <li><a href="../pages/breaking-news.html">Breaking News</a></li>
-                <li><a href="../pages/quidditch.html">Quidditch</a></li>
-                <li><a href="../pages/witches-little-helper.html">Witches Little Helper</a></li>
-                <li><a href="../pages/www.html"></a>Weasleys' Wizard Wheezes</li>
-                <li><a href="../pages/hogwarts.html">Hogwarts</a></li>
-            </ul>
-        </nav>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="../index.html">Daily Owl</a></li>
+          <li><a href="../pages/breaking-news.html">Breaking News</a></li>
+          <li><a href="../pages/quidditch.html">Quidditch</a></li>
+          <li>
+            <a href="../pages/witches-little-helper.html"
+              >Witches Little Helper</a
+            >
+          </li>
+          <li><a href="../pages/www.html"></a>Weasleys' Wizard Wheezes</li>
+          <li><a href="../pages/hogwarts.html">Hogwarts</a></li>
+        </ul>
+      </nav>
     </header>
 
     <div id="breaking-news-article-3">
-        <div class="breaking-news-1">
-            <h2>Breaking News</h2>
-            <section class="new-beasts">
-                <h3>New Magical Beast Discovered in New York City</h3>
-                <img src="../images/Demiguise.JPG" alt="Demiguise image" />
-                <p>
-                    <b>The Demiguise</b> is a peaceful, herbivorous magical beast that could make
-                    itself invisible and tell the future, both abilities which made it
-                    very sought-after. However, it was very hard to catch until... <i> read full article...</i>
-                </p>
-            </section>
-        </div>
+      <div class="breaking-news-1">
+        <h2>Breaking News</h2>
+        <section class="new-beasts">
+          <h3>New Magical Beast Discovered in New York City</h3>
+          <img src="../images/Demiguise.JPG" alt="Demiguise image" />
+          <p>
+            <b>The Demiguise</b> is a peaceful, herbivorous magical beast that
+            could make itself invisible and tell the future, both abilities
+            which made it very sought-after. However, it was very hard to catch
+            until... <i> read full article...</i>
+          </p>
+        </section>
+      </div>
 
-        <div class="breaking-news-1">
-            <h2>Dragons Broke Loose</h2>
-            <section class="loose-dragons">
-                <h3>Dragons broke loose</h3>
-                <img src="../images/ridgeback.png" alt="Dragons" />
-                <p>
-                    Four Norwegian Ridgeback dragons broke loose from
-                    the Romanian reserve. The dragons have been spotted
-                    by five muggles which have been Obliviated at once...
-                    <i> read full article...</i>
-                </p>
-            </section>
-        </div>
+      <div class="breaking-news-1">
+        <h2>Dragons Broke Loose</h2>
+        <section class="loose-dragons">
+          <h3>Dragons broke loose</h3>
+          <img src="../images/ridgeback.png" alt="Dragons" />
+          <p>
+            Four Norwegian Ridgeback dragons broke loose from the Romanian
+            reserve. The dragons have been spotted by five muggles which have
+            been Obliviated at once...
+            <i> read full article...</i>
+          </p>
+        </section>
+      </div>
 
-        <div class="breaking-news-1">
-            <h2>Breaking News</h2>
-            <section class="gringotts-bank-break-in">
-                <h3>Gringotts Break-In Latest</h3>
-                <img src="../images/Gringotts.png" alt="gringotts-image" />
-                <p>
-                    There have not been many break-ins in the history
-                    of Gringotts Wizarding Bank. Last night, however,
-                    there was another attempt. The culprit has not been
-                    caught yet and the Goblins do not have any leads...
-                    <i>read full article...</i>
-                </p>
-            </section>
-        </div>
-
+      <div class="breaking-news-1">
+        <h2>Breaking News</h2>
+        <section class="gringotts-bank-break-in">
+          <h3>Gringotts Break-In Latest</h3>
+          <img src="../images/Gringotts.png" alt="gringotts-image" />
+          <p>
+            There have not been many break-ins in the history of Gringotts
+            Wizarding Bank. Last night, however, there was another attempt. The
+            culprit has not been caught yet and the Goblins do not have any
+            leads...
+            <i>read full article...</i>
+          </p>
+        </section>
+      </div>
     </div>
-
-    
-
-
-
-</body>
-
+  </body>
 </html>
