--- a/pages/witches-little-helper.html
+++ b/pages/witches-little-helper.html
@@ -26,6 +26,16 @@
             </ul>
         </nav>
     </header>
-</body>
 
+    <div id="cauldron-video">
+        <article id="witches-little-helper">
+            <h3>Witches Little Helper</h3>
+            <video autoplay loop width="640" height="420">
+                <source src="../videos/cauldron-2.mp4" type="video/mp4" />
+                Your browser does not support it
+            </video>
+        </article>
+    </div>
+
+</body>
 </html>
