--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
                 <li><a href="./index.html">Daily Owl</a></li>
                 <li><a href="./pages/breaking-news.html">Breaking News</a></li>
                 <li><a href="./pages/quidditch.html">Quidditch</a></li>
-                <li>
-                    <a href="./pages/witches-little-helper.html">Witches Little Helper</a>
-                </li>
+                <li><a href="./pages/witches-little-helper.html">Witches Little Helper</a></li>
                 <li><a href="./pages/www.html"></a>Weasleys' Wizard Wheezes</li>
                 <li><a href="./pages/hogwarts.html">Hogwarts</a></li>
             </ul>
