--- a/pages/hogwarts.html
+++ b/pages/hogwarts.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/hogwarts.css" type="text/css" />
 </head>
 
-<body background="../images/afaur5o8aqeFKbXOINshba0y.avif">
+<body background="../images/harry_potter_hogwarts_on_fire_4k_5k_hd_movies-2560x1440.jpg">
     <header id="page-header">
         <nav class="main-nav">
             <ul>
