setting things up for page 4

--- a/pages/witches-little-helper.html
+++ b/pages/witches-little-helper.html
@@ -36,6 +36,18 @@
         </article>
     </div>
 
+    <div id="potion-1">
+        <img src="../images/12.png" alt="potion-1">
+    </div>
+
+    <div id="potions-2" alt="potion-2">
+        <img src="../images/13.png">
+    </div>
+
+    <div id="potions-3">
+        <img src="../images/14.png" alt="potion-3">
+    </div>
+
 </body>
 
 </html>
