--- a/pages/witches-little-helper.html
+++ b/pages/witches-little-helper.html
@@ -27,26 +27,29 @@
         </nav>
     </header>
 
-    <div id="cauldron-video">
-        <article id="witches-little-helper">
-            <video autoplay loop width="640" height="420">
-                <source src="../videos/cauldron-2.mp4" type="video/mp4" />
-                Your browser does not support it
-            </video>
-        </article>
-    </div>
+    <main>
 
-    <div id="potion-1">
-        <img src="../images/12.png" alt="potion-1">
-    </div>
+        <div id="cauldron-video">
+            <article id="witches-little-helper">
+                <video autoplay loop width="640" height="420">
+                    <source src="../videos/cauldron-2.mp4" type="video/mp4" />
+                    Your browser does not support it
+                </video>
+            </article>
+        </div>
 
-    <div id="potions-2" alt="potion-2">
-        <img src="../images/13.png">
-    </div>
+        <div id="potion-1">
+            <img src="../images/12.png" alt="potion-1">
+        </div>
 
-    <div id="potions-3">
-        <img src="../images/14.png" alt="potion-3">
-    </div>
+        <div id="potions-2" alt="potion-2">
+            <img src="../images/13.png">
+        </div>
+
+        <div id="potions-3">
+            <img src="../images/14.png" alt="potion-3">
+        </div>
+    </main>
 
 </body>
 
