--- a/pages/quidditch.html
+++ b/pages/quidditch.html
@@ -28,40 +28,42 @@
       </ul>
     </nav>
   </header>
-  <div id="quidditch-finale-game">
-    <section id="quidditch-finale">
-      <h1>This year's Quidditch Cup Finale</h1>
-    </section>
-    <p>
-      This year all of you Quidditch lovers shall witness a match between
-      Japan and Portugal.
-    </p>
-  </div>
-  <div class="hover-over-teams">
-    <h1>Toyohashi Tengu vs. Braga Broomfleet</h1>
-  </div>
-  <div class="quidditch-scores">
-    <ul>
-      <li>
-        <h3>First Matches Results</h3>
-        <ul>
-          <li>Gimbi Giant-Slayers (Ethiopia) vs. Barnton (England) 300:210</li>
-          <li>Toyohashi Tengu (Japan) vs. Stonewall Stormers (Canada) 200:180</li>
-          <li>Vratsa Vultures (Bulgaria) vs. Moutohora Macaws (New Zeland) 320:250</li>
-          <li>Fitchburg Finches (US) vs. Tarapoto Tree-Skimmers (Peru) 120:280</li>
-          <li>Patonga Proudsticks (Uganda) vs. Grodzisk Goblins (Poland) 200:100</li>
-          <li>Sumbawanga Sunrays (Tanzania) vs. Quiberon Quafflepunchers (France) 240:250</li>
-          <li>Tchamba Charmers (Togo) vs. Braga Broomfleet (Portugal) 300:320</li>
-          <li>Barnton (England) vs. Bigonville Bombers (Luxembourg) 230:210</li>
-          <li>Cork (Ireland) vs. Heidelberg Harriers (Germany) 370:350</li>
-          <li>Thundelarra Thunderers (Australia) vs. Moose Jaw Meteorites (Canada) 420:200</li>
-          <li>Haileybury Hammers (Canada) vs. Wollongong Warriors (Australia) 220:220</li>
-          <li>Sweetwater All-Stars (US) vs. Lancashire (England) 370:120</li>
-          <li>Karasjok Kites (Norway) vs. Ilkley (Engand) 160:50</li>
-        </ul>
-      </li>
-    </ul>
-  </div>
+  <main>
+    <div id="quidditch-finale-game">
+      <section id="quidditch-finale">
+        <h1>This year's Quidditch Cup Finale</h1>
+      </section>
+      <p>
+        This year all of you Quidditch lovers shall witness a match between
+        Japan and Portugal.
+      </p>
+    </div>
+    <div class="hover-over-teams">
+      <h1>Toyohashi Tengu vs. Braga Broomfleet</h1>
+    </div>
+    <div class="quidditch-scores">
+      <ul>
+        <li>
+          <h3>First Matches Results</h3>
+          <ul>
+            <li>Gimbi Giant-Slayers (Ethiopia) vs. Barnton (England) 300:210</li>
+            <li>Toyohashi Tengu (Japan) vs. Stonewall Stormers (Canada) 200:180</li>
+            <li>Vratsa Vultures (Bulgaria) vs. Moutohora Macaws (New Zeland) 320:250</li>
+            <li>Fitchburg Finches (US) vs. Tarapoto Tree-Skimmers (Peru) 120:280</li>
+            <li>Patonga Proudsticks (Uganda) vs. Grodzisk Goblins (Poland) 200:100</li>
+            <li>Sumbawanga Sunrays (Tanzania) vs. Quiberon Quafflepunchers (France) 240:250</li>
+            <li>Tchamba Charmers (Togo) vs. Braga Broomfleet (Portugal) 300:320</li>
+            <li>Barnton (England) vs. Bigonville Bombers (Luxembourg) 230:210</li>
+            <li>Cork (Ireland) vs. Heidelberg Harriers (Germany) 370:350</li>
+            <li>Thundelarra Thunderers (Australia) vs. Moose Jaw Meteorites (Canada) 420:200</li>
+            <li>Haileybury Hammers (Canada) vs. Wollongong Warriors (Australia) 220:220</li>
+            <li>Sweetwater All-Stars (US) vs. Lancashire (England) 370:120</li>
+            <li>Karasjok Kites (Norway) vs. Ilkley (Engand) 160:50</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </main>
 
 </body>
 
