added font-family to witches little helper

--- a/pages/witches-little-helper.html
+++ b/pages/witches-little-helper.html
@@ -8,9 +8,11 @@
     <meta name="description" content="witches-little-helper" />
     <meta name="keywords" content="wizard, witch, news" />
     <title>Witches' Little Helper</title>
-
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
     <link rel="stylesheet" href="../css/witches-little-helper.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">>
 </head>
 
 <body background="./images/Owls_Birds_Snowy_owl_Flight_Front_543052_2560x1440.jpg">
@@ -20,7 +22,9 @@
                 <li><a href="../index.html">Daily Owl</a></li>
                 <li><a href="../pages/breaking-news.html">Breaking News</a></li>
                 <li><a href="../pages/quidditch.html">Quidditch</a></li>
-                <li><a href="../pages/witches-little-helper.html">Witches Little Helper</a></li>
+                <li>
+                    <a href="../pages/witches-little-helper.html">Witches Little Helper</a>
+                </li>
                 <li><a href="../pages/www.html"></a>Weasleys' Wizard Wheezes</li>
                 <li><a href="../pages/hogwarts.html">Hogwarts</a></li>
             </ul>
@@ -28,7 +32,6 @@
     </header>
 
     <main>
-
         <div id="cauldron-video">
             <article id="witches-little-helper">
                 <video autoplay loop width="640" height="420">
@@ -38,19 +41,43 @@
             </article>
         </div>
 
-        <div id="potion-1">
-            <img src="../images/12.png" alt="potion-1">
+        <div class="article-set-up">
+            <div id="potion-1">
+                <h2>How to de-gnome the garden properly</h2>
+                <img src="../images/12.png" alt="potion-1" />
+            </div>
+            <p>
+                This was normally accomplished by physically picking up the gnomes and
+                expelling them from the garden in question. Newton Scamander
+                recommended in Fantastic Beasts and Where to Find Them that swinging
+                the gnome around one's head until dizzy and then dropping it over the
+                garden wall was sufficient...
+            </p>
         </div>
 
-        <div id="potions-2" alt="potion-2">
-            <img src="../images/13.png">
+        <div class="article-set-up" id="article-2">
+            <p>
+                Mrs Skower's All-Purpose Magical Mess Remover was a magical cleaning
+                solution invented some time after 1492...
+            </p>
+            <div id="potions-2" alt="potion-2">
+                <img src="../images/13.png" />
+            </div>
+            <h2>Mrs Skower's All-Purpose Magical Mess Remover</h2>
         </div>
 
-        <div id="potions-3">
-            <img src="../images/14.png" alt="potion-3">
+        <div class="article-set-up">
+            <h2>Murtlap Essence - a must-have in the house</h2>
+            <div id="potions-3">
+                <img src="../images/14.png" alt="potion-3" />
+            </div>
+            <p>
+                Murtlap Essence is a solution of strained and pickled
+                tentacles of Murtlaps. It sooths painful cuts and abrasions,
+                and helps them to heal.
+            </p>
         </div>
     </main>
-
 </body>
 
 </html>
