font-family to witches little helper

--- a/pages/witches-little-helper.html
+++ b/pages/witches-little-helper.html
@@ -74,7 +74,7 @@
             <p>
                 Murtlap Essence is a solution of strained and pickled
                 tentacles of Murtlaps. It sooths painful cuts and abrasions,
-                and helps them to heal.
+                and helps them to heal...
             </p>
         </div>
     </main>
