--- a/pages/witches-little-helper.html
+++ b/pages/witches-little-helper.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/witches-little-helper.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">>
+    <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">
 </head>
 
 <body background="./images/Owls_Birds_Snowy_owl_Flight_Front_543052_2560x1440.jpg">
