--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="./pages/breaking-news.html">Breaking News</a></li>
                 <li><a href="./pages/quidditch.html">Quidditch</a></li>
                 <li><a href="./pages/witches-little-helper.html">Witches Little Helper</a></li>
-                <li><a href="./pages/www.html"></a>Weasleys' Wizard Wheezes</li>
+                <li><a href="./pages/www.html">Weasleys' Wizard Wheezes</a></li>
                 <li><a href="./pages/hogwarts.html">Hogwarts</a></li>
             </ul>
         </nav>
