--- a/pages/fantastic-beasts.html
+++ b/pages/fantastic-beasts.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Annie Uchiha" />
-    <meta name="description" content="weasleys-wizard-wheezes" />
-    <meta name="keywords" content="wizard, witch, news" />
-    <title>Weasleys' Wizard Wheezes</title>
+    <meta name="description" content="fantastic-beasts" />
+    <meta name="keywords" content="fanstastic, beasts" />
+    <title>Fantastic Beasts and Where To Find Them</title>
 
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
-    <link rel="stylesheet" href="../css/www.css" type="text/css" />
+    <link rel="stylesheet" href="../css/fanstastic-beasts.css" type="text/css" />
 </head>
 
-<body background="../images/Untitled-1.jpg">
+<body background="../images/Fantastic_Beasts_and_Where_to_Find_Them_Katherine_521899_2560x1440.jpg">
     <header id="page-header">
         <nav class="main-nav">
             <ul>
