--- a/pages/quidditch.html
+++ b/pages/quidditch.html
@@ -19,11 +19,12 @@
       <ul>
         <li><a href="../index.html">Daily Owl</a></li>
         <li><a href="../pages/breaking-news.html">Breaking News</a></li>
+        <li><a href="../pages/fantastic-beasts.html">Fantastic Beasts</a></li>
         <li><a href="../pages/quidditch.html">Quidditch</a></li>
         <li>
           <a href="../pages/witches-little-helper.html">Witches Little Helper</a>
         </li>
-        <li><a href="../pages/www.html"></a>Weasleys' Wizard Wheezes</li>
+        <li><a href="../pages/www.html">Weasleys' Wizard Wheezes</a></li>
         <li><a href="../pages/hogwarts.html">Hogwarts</a></li>
       </ul>
     </nav>
