--- a/pages/breaking-news.html
+++ b/pages/breaking-news.html
@@ -48,7 +48,7 @@
             </div>
 
             <div class="breaking-news-1">
-                <h2>Dragons Broke Loose</h2>
+                <h2>Breaking News</h2>
                 <section class="loose-dragons">
                     <h3 class="hover-over-title">Dragons broke loose</h3>
                     <img src="../images/ridgeback.png" alt="Dragons" />
