--- a/pages/fantastic-beasts.html
+++ b/pages/fantastic-beasts.html
@@ -27,6 +27,18 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="niffler-hide">
+            <img src="../images/niffler-hide.png" alt="niffler-found" height="220px" class="niffler-hide__img1">
+            <img src="../gif/niffler-fantastic.gif" alt="niffler-hide" class="nifler-hide__img2">
+        </div>
+        <div class="bowtruckle-hide">
+            <img src="../images/hide bowtruckle.jpg" alt="hide-bowtruckle" class="bowtruckle-hide__img1">
+            <img src="../gif/4c10caa8f00ae73f366f2dbb997312fa.gif" alt="bowtruckle" width="400px"
+                class="bowtruckle-hide__img2">
+        </div>
+
+    </main>
 </body>
 
 </html>
