hid one more beast

--- a/pages/fantastic-beasts.html
+++ b/pages/fantastic-beasts.html
@@ -37,6 +37,10 @@
             <img src="../gif/4c10caa8f00ae73f366f2dbb997312fa.gif" alt="bowtruckle" width="525px"
                 class="bowtruckle-hide__img2">
         </div>
+        <div class="hippogriff-hide">
+            <img src="../images/hide-hippogriff.jpg" alt="hide-hippogriff" class="hippogriff-hide__img1">
+            <img src="../gif/hippogriff.gif" alt="hippogriff" class="hippogriff-hide__img2">
+        </div>
 
     </main>
 </body>
