can you find the three fantastic beasts

--- a/pages/fantastic-beasts.html
+++ b/pages/fantastic-beasts.html
@@ -41,6 +41,7 @@
             <img src="../images/hide-hippogriff.jpg" alt="hide-hippogriff" class="hippogriff-hide__img1">
             <img src="../gif/hippogriff.gif" alt="hippogriff" class="hippogriff-hide__img2">
         </div>
+        <h1>There are three fantastic beasts hidden in this page. Can you find them?</h1>
 
     </main>
 </body>
