--- a/pages/fantastic-beasts.html
+++ b/pages/fantastic-beasts.html
@@ -21,7 +21,9 @@
                 <li><a href="../pages/breaking-news.html">Breaking News</a></li>
                 <li><a href="../pages/fantastic-beasts.html">Fantastic Beasts</a></li>
                 <li><a href="../pages/quidditch.html">Quidditch</a></li>
-                <li><a href="../pages/witches-little-helper.html">Witches Little Helper</a></li>
+                <li>
+                    <a href="../pages/witches-little-helper.html">Witches Little Helper</a>
+                </li>
                 <li><a href="../pages/www.html">Weasleys' Wizard Wheezes</a></li>
                 <li><a href="../pages/hogwarts.html">Hogwarts</a></li>
             </ul>
@@ -29,20 +31,21 @@
     </header>
     <main>
         <div class="niffler-hide">
-            <img src="../images/niffler-hide.png" alt="niffler-found" height="220px" class="niffler-hide__img1">
-            <img src="../gif/niffler-fantastic.gif" alt="niffler-hide" class="nifler-hide__img2">
+            <img src="../images/niffler-hide.png" alt="niffler-found" height="220px" class="niffler-hide__img1" />
+            <img src="../gif/niffler-fantastic.gif" alt="niffler-hide" class="nifler-hide__img2" />
         </div>
         <div class="bowtruckle-hide">
-            <img src="../images/hide bowtruckle.jpg" alt="hide-bowtruckle" class="bowtruckle-hide__img1">
+            <img src="../images/hide bowtruckle.jpg" alt="hide-bowtruckle" class="bowtruckle-hide__img1" />
             <img src="../gif/4c10caa8f00ae73f366f2dbb997312fa.gif" alt="bowtruckle" width="525px"
-                class="bowtruckle-hide__img2">
+                class="bowtruckle-hide__img2" />
         </div>
         <div class="hippogriff-hide">
-            <img src="../images/hide-hippogriff.jpg" alt="hide-hippogriff" class="hippogriff-hide__img1">
-            <img src="../gif/hippogriff.gif" alt="hippogriff" class="hippogriff-hide__img2">
+            <img src="../images/hide-hippogriff.jpg" alt="hide-hippogriff" class="hippogriff-hide__img1" />
+            <img src="../gif/hippogriff.gif" alt="hippogriff" class="hippogriff-hide__img2" />
         </div>
-        <h1>There are three fantastic beasts hidden in this page. Can you find them?</h1>
-
+        <h1>
+            There are three fantastic beasts hidden in this page. Can you find them?
+        </h1>
     </main>
 </body>
 
