add a moving object in the witches sections

--- a/pages/witches-little-helper.html
+++ b/pages/witches-little-helper.html
@@ -42,6 +42,8 @@
             </article>
         </div>
 
+            <img src="../images/chest open.png" alt="chest-open" height="360px" class="open-chest__openimg" />
+
         <div class="article-set-up">
             <div id="potion-1">
                 <h2>How to de-gnome the garden properly</h2>
