--- a/pages/breaking-news.html
+++ b/pages/breaking-news.html
@@ -24,7 +24,7 @@
                 <li>
                     <a href="../pages/witches-little-helper.html">Witches Little Helper</a>
                 </li>
-                <li><a href="../pages/www.html">Weasleys' Wizard Wheezes</a>Weasleys' Wizard Wheezes</li>
+                <li><a href="../pages/www.html">Weasleys' Wizard Wheezes</a></li>
                 <li><a href="../pages/hogwarts.html">Hogwarts</a></li>
             </ul>
         </nav>
