add a feature to main page

--- a/index.html
+++ b/index.html
@@ -22,13 +22,26 @@
                 <li><a href="./pages/breaking-news.html">Breaking News</a></li>
                 <li><a href="./pages/fantastic-beasts.html">Fantastic Beasts</a></li>
                 <li><a href="./pages/quidditch.html">Quidditch</a></li>
-                <li><a href="./pages/witches-little-helper.html">Witches Little Helper</a></li>
+                <li>
+                    <a href="./pages/witches-little-helper.html">Witches Little Helper</a>
+                </li>
                 <li><a href="./pages/www.html">Weasleys' Wizard Wheezes</a></li>
                 <li><a href="./pages/hogwarts.html">Hogwarts</a></li>
             </ul>
         </nav>
     </header>
-   
+    <main>
+        <div class="article-one">
+            <img src="../Daily-Owls-CSS-practice/images/Article-one-img.jpg" alt="article-one-img" height="220px"
+                class="article-one__img" />
+            <p class="article-one__text">
+                The magic of The Wizarding World of Harry Potter is growing! Universal
+                Orlando Resort today revealed incredible new details on their new
+                theme park, Universal Epic Universe. The new Wizarding World addition
+                includes 1920s wizarding Paris and the British Ministry of Magic.
+            </p>
+        </div>
+    </main>
 </body>
 
 </html>
