add feauture catch the snitch - quidditch page

--- a/pages/quidditch.html
+++ b/pages/quidditch.html
@@ -42,6 +42,7 @@
     <div class="hover-over-teams">
       <h1>Toyohashi Tengu vs. Braga Broomfleet</h1>
     </div>
+    <img src="../gif/golden snitch.gif" alt="golden-snitch-gif" class="golden-snitch">
     <div class="quidditch-scores">
       <ul>
         <li>
