--- a/pages/witches-little-helper.html
+++ b/pages/witches-little-helper.html
@@ -10,9 +10,9 @@
     <title>Witches' Little Helper</title>
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
     <link rel="stylesheet" href="../css/witches-little-helper.css" type="text/css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet" />
 </head>
 
 <body background="./images/Owls_Birds_Snowy_owl_Flight_Front_543052_2560x1440.jpg">
@@ -41,11 +41,11 @@
                 </video>
             </article>
         </div>
-<div class="object-behind-chest">
-    <img src="../images/chest open.png" alt="chest-open" height="400px" class="open-chest__openimg" />
-    <img src="../gif/giphy.gif" alt="image-behind-chest" width="200px" class="img-behind">
-</div>
-            
+        <div class="object-behind-chest">
+            <img src="../images/chest open.png" alt="chest-open" height="400px" class="open-chest__openimg" />
+            <img src="../gif/giphy.gif" alt="image-behind-chest" width="200px" class="img-behind" />
+        </div>
+
         <div class="article-set-up">
             <div id="potion-1">
                 <h2>How to de-gnome the garden properly</h2>
@@ -77,9 +77,9 @@
                 <img src="../images/14.png" alt="potion-3" />
             </div>
             <p>
-                Murtlap Essence is a solution of strained and pickled
-                tentacles of Murtlaps. It sooths painful cuts and abrasions,
-                and helps them to heal...
+                Murtlap Essence is a solution of strained and pickled tentacles of
+                Murtlaps. It sooths painful cuts and abrasions, and helps them to
+                heal...
             </p>
         </div>
     </main>
