add a flash animation to h1 tag to fantastic beasts page

--- a/pages/fantastic-beasts.html
+++ b/pages/fantastic-beasts.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
     <link rel="stylesheet" href="../css/fanstastic-beasts.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body background="../images/Fantastic_Beasts_and_Where_to_Find_Them_Katherine_521899_2560x1440.jpg">
@@ -43,7 +44,7 @@
             <img src="../images/hide-hippogriff.jpg" alt="hide-hippogriff" class="hippogriff-hide__img1" />
             <img src="../gif/hippogriff.gif" alt="hippogriff" class="hippogriff-hide__img2" />
         </div>
-        <h1>
+        <h1 class="animate__flash">
             There are three fantastic beasts hidden in this page. Can you find them?
         </h1>
     </main>
