--- a/pages/www.html
+++ b/pages/www.html
@@ -29,49 +29,7 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="flex-container-2">
-            <img src="../images/Peruvian_Instant_Darkness_Powder_display_in_WWW_shop.JPG.webp" alt="peruvian-powder"
-                width="300px" class="flex-container-2__img" />
-            <div class="flex-container__textbox">
-                <h1 class="flex-containe-2__title">Instant Darkness Powder</h1>
-                <p class="flex-container-2__text">
-                    When thrown into the air, turns the immediate area pitch black so
-                    that common light spells and fire magic will not work in the area of
-                    effect, although a Hand of Glory will. Imported from Peru.
-                </p>
-                <span class="flex-container-2__price">70 Galleons</span>
-            </div>
-        </section>
-
-        <section class="flex-container-1">
-            <img src="../images/Puking-pastille-lrg.webp" alt="puking-pastilles" width="300px"
-                class="flex-container-1__img" />
-            <div class="flex-container-1__textbox">
-                <h1 class="flex-container-1__title">Puking Pastilles</h1>
-                <p class="flex-container-1__text">
-                    Each end of the sweet is colour-coded, so that one end causes the
-                    eater to vomit and the other cancels the effect.
-                </p>
-                <span class="flex-container-1__price">20 Galleons</span>
-            </div>
-        </section>
-
-        <section class="flex-container-3">
-            <img src="../gif/weasley.gif" alt="weasley-fireworks" width="300px" class="flex-container-3__img" />
-            <div class="flex-container-3__textbox">
-                <h1 class="flex-container-3__title">Weasleys Wildfire Whiz-bangs</h1>
-                <p class="flex-container-3__text">
-                    The assortment included smoking dragons made of green and gold
-                    sparks, giant 5-foot Catherine Wheels like “flying saucers,” flying
-                    pigs of pink and silver, and sparklers that wrote swear words in the
-                    air. Trying to make them vanish only multiplied them by ten each
-                    time.
-                </p>
-                <span class="flex-container-3__price">50 Galleons</span>
-            </div>
-        </section>
-    </main>
+    <main></main>
 </body>
 
 </html>
